bugs: Fix mapper because it isn'tmapper database data correct